# MSPM0G3507_tmplate

./: .gitignore  CMakeLists.txt  README.md  README.mk  ti_mspm0_launchpad.cfg
Sysconfig/: sys.syscfg  ti_msp_dl_config.c  ti_msp_dl_config.h
User/Inc/: basic.h  delay.h  main.h
User/Src/: basic.c  delay.c  main.c  retartget.c
cmake/: gcc-arm-none-eabi.cmake
